--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --watch --colors",
-    "serve": "webpack-dev-server --progress --colors"
+    "start": "webpack-dev-server",
+    "build": "webpack -p"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +13,7 @@
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
-    "babel-preset-env": "^1.5.1",
+    "babel-preset-es2015": "^6.24.1",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
   }
